# FFmpegDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/github/xch168/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/github/xch168/ffmpegdemo/: MainActivity.java
app/src/main/jniLibs/include/libavutil/: ffversion.h
app/src/test/java/com/github/xch168/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
